--- a/src/style/home.css
+++ b/src/style/home.css
@@ -72,6 +72,117 @@ p {
   flex-wrap: wrap;
 }
 
+.login {
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  color: #000;
+  cursor: pointer;
+}
+
+/*login*/
+
+nav .btn {
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 250px;
+	height: 50px;
+	margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+nav .btn a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(255, 255, 255, 0.05);
+	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	border-radius: 30px;
+	padding: 10px;
+	letter-spacing: 1px;
+	text-decoration: none;
+	overflow: hidden;
+	color: #fff;
+	font-weight: 400px;
+	z-index: 1;
+	transition: 0.5s;
+	backdrop-filter: blur(15px);
+}
+nav .btn:hover a {
+	letter-spacing: 3px;
+}
+nav .btn a::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
+	transform: skewX(45deg) translate(0);
+	transition: 0.5s;
+	filter: blur(0px);
+}
+nav .btn:hover a::before {
+	transform: skewX(45deg) translate(200px);
+}
+nav .btn::before {
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translatex(-50%);
+	bottom: -5px;
+	width: 30px;
+	height: 10px;
+	background: rgba(0, 255, 174, 0.638);
+	border-radius: 10px;
+	transition: 0.5s;
+	transition-delay: 0.5;
+}
+
+nav .btn:hover::before /*lightup button*/ {
+	bottom: 0;
+	height: 50%;
+	width: 80%;
+	border-radius: 30px;
+}
+
+nav .btn::after {
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translatex(-50%);
+	top: -5px;
+	width: 30px;
+	height: 10px;
+	background: rgba(0, 255, 174, 0.638);
+	border-radius: 10px;
+	transition: 0.5s;
+	transition-delay: 0.5;
+}
+nav .btn:hover::after /*lightup button*/ {
+	top: 0;
+	height: 50%;
+	width: 80%;
+	border-radius: 30px;
+}
+
+nav .btn:nth-child(1)::before, /* 1*/
+nav .btn:nth-child(1)::after {
+	background: #1eff45;
+	box-shadow: 0 0 5px #1eff45, 0 0 15px #1eff45, 0 0 30px #1eff45,
+		0 0 60px #1eff45;
+}
+
 /*end nav-bar*/
 
 .panel {
@@ -94,7 +205,13 @@ p {
   &:nth-child(4) {
     background-image: url(https://unsplash.it/g/900/601?image=0);
   }
+  &:nth-child(4) {
+    background-image: url(https://unsplash.it/g/900/605);
+  }
   &:nth-child(5) {
+    background-image: url(https://images.unsplash.com/photo-1527576539890-dfa815648363?q=80&w=1530&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  }
+  &:nth-child(6) {
     background-image: url(https://images.unsplash.com/photo-1527576539890-dfa815648363?q=80&w=1530&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   }}
 
@@ -127,6 +244,10 @@ p {
   width: 15vh;
   display: flex;
   padding-left: 10px;
+}
+
+.img-plataform {
+  max-width: 40%;
 }
 
 /*team section style*/
@@ -260,4 +381,22 @@ p {
         background-clip: text; 
     -webkit-text-fill-color: transparent;
     transition: all 265ms ease-in;
+}
+
+/* Estilos para telas menores que 700 pixels */
+@media screen and (max-width: 700px) {
+  .menu {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .menu.active {
+    display: flex;
+  }
+
+  .toggle-btn {
+    display: block;
+    cursor: pointer;
+  }
 }
